--- a/01/webpack-config-demo/package.json
+++ b/01/webpack-config-demo/package.json
@@ -37,6 +37,8 @@
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^6.1.0",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2"
   }
