--- a/01/webpack-config-demo/package.json
+++ b/01/webpack-config-demo/package.json
@@ -34,6 +34,7 @@
     "eslint-webpack-plugin": "^2.5.4",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "mini-css-extract-plugin": "^2.1.0",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
